force-app/main/default/objects/RFPRFQ__c/RFPRFQ__c.object-meta.xml
<CustomObject>
    <label>RFP/RFQ</label>
    <nameField>
        <displayFormat>RF-{000000}</displayFormat>
        <label>RFP/RFQ ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP/RFQ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>