force-app/main/default/objects/RFPRFQ__c/fields/DeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDestination__c</fullName>
    <label>DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>