force-app/main/default/objects/RFPRFQ__c/fields/DescriptionOfGoods__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOfGoods__c</fullName>
    <label>DESCRIPTION OF GOODS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>