force-app/main/default/objects/RFPRFQ__c/fields/ETD__c.field-meta.xml
<CustomField>
    <fullName>ETD__c</fullName>
    <label>ETD</label>
    <type>Date</type>
</CustomField>