force-app/main/default/objects/RFPRFQ__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>FREQUENCY</label>
    <type>TextArea</type>
</CustomField>