force-app/main/default/objects/RFPRFQ__c/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>INCOTERMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Incoterms</valueSetName>
    </valueSet>
</CustomField>