force-app/main/default/objects/RFPRFQ__c/fields/NotesForREPEmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>NotesForREPEmailTemplate__c</fullName>
    <label>NOTES FOR RFP EMAIL TEMPLATE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>