force-app/main/default/objects/RFPRFQ__c/fields/ParentRFPRFQID__c.field-meta.xml
<CustomField>
    <fullName>ParentRFPRFQID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT RFP/RFQ ID</label>
    <referenceTo>RFPRFQ__c</referenceTo>
    <relationshipLabel>CHILD RFP/RFQ</relationshipLabel>
    <relationshipName>RFP_RFQ</relationshipName>
    <type>Lookup</type>
</CustomField>