force-app/main/default/objects/RFPRFQ__c/fields/PICCustomer__c.field-meta.xml
<CustomField>
    <fullName>PICCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.I.C OF CUSTOMER</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFP/RFQ</relationshipLabel>
    <relationshipName>RFPRFQPIC</relationshipName>
    <type>Lookup</type>
</CustomField>