force-app/main/default/objects/RFPRFQ__c/fields/PickLocation__c.field-meta.xml
<CustomField>
    <fullName>PickLocation__c</fullName>
    <label>PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>