force-app/main/default/objects/RFPRFQ__c/fields/PickupAddress__c.field-meta.xml
<CustomField>
    <fullName>PickupAddress__c</fullName>
    <label>PICKUP ADDRESS</label>
    <type>TextArea</type>
</CustomField>