force-app/main/default/objects/RFPRFQ__c/fields/PICOfPickupLocation__c.field-meta.xml
<CustomField>
    <fullName>PICOfPickupLocation__c</fullName>
    <label>P.I.C OF PICKUP LOCATION</label>
    <type>TextArea</type>
</CustomField>