force-app/main/default/objects/RFPRFQ__c/fields/PODAOA__c.field-meta.xml
<CustomField>
    <fullName>PODAOA__c</fullName>
    <label>P.O.D(A.O.A)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>