force-app/main/default/objects/RFPRFQ__c/fields/POLAOD__c.field-meta.xml
<CustomField>
    <fullName>POLAOD__c</fullName>
    <label>P.O.L(A.O.D)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>