force-app/main/default/objects/RFPRFQ__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRODUCT ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PRODUCT__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>RFP/RFQ</relationshipLabel>
    <relationshipName>RFPRFQProduct</relationshipName>
    <type>Lookup</type>
</CustomField>