force-app/main/default/objects/RFPRFQ__c/fields/RateRequirement__c.field-meta.xml
<CustomField>
    <fullName>RateRequirement__c</fullName>
    <label>RATE REQUIREMENT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>