force-app/main/default/objects/RFPRFQ__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>REQUEST DATE</label>
    <type>Date</type>
</CustomField>