force-app/main/default/objects/RFPRFQ__c/fields/RequiredInformation__c.field-meta.xml
<CustomField>
    <fullName>RequiredInformation__c</fullName>
    <label>REQUIRED INFORMATION</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ForwardingServiceInformation</valueSetName>
    </valueSet>
</CustomField>