force-app/main/default/objects/RFPRFQ__c/fields/RequiredService__c.field-meta.xml
<CustomField>
    <fullName>RequiredService__c</fullName>
    <label>REQUIRED SERVICE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RequiredService</valueSetName>
    </valueSet>
</CustomField>