force-app/main/default/objects/RFPRFQ__c/fields/RFPREQName__c.field-meta.xml
<CustomField>
    <fullName>RFPREQName__c</fullName>
    <label>RFP/REQ NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>