force-app/main/default/objects/RFPRFQ__c/fields/RFPRFQStatus__c.field-meta.xml
<CustomField>
    <fullName>RFPRFQStatus__c</fullName>
    <label>RFP/RFQ STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WorkStatus</valueSetName>
    </valueSet>
</CustomField>