force-app/main/default/objects/RFPRFQ__c/fields/RquestBy__c.field-meta.xml
<CustomField>
    <fullName>RquestBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>REQUEST BY</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RFPRFQRequester</relationshipName>
    <type>Lookup</type>
</CustomField>