force-app/main/default/objects/RFPRFQ__c/fields/ShipmentOrderID__c.field-meta.xml
<CustomField>
    <fullName>ShipmentOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloFMS SHIPMENT ORDER ID</label>
    <referenceTo>CustomObject1__c</referenceTo>
    <relationshipLabel>RFP/RFQ</relationshipLabel>
    <relationshipName>RFRFQShipmentOrderID</relationshipName>
    <type>Lookup</type>
</CustomField>