force-app/main/default/objects/RFPRFQ__c/fields/TELOfDeliveryDestination__c.field-meta.xml
<CustomField>
    <fullName>TELOfDeliveryDestination__c</fullName>
    <label>TEL OF DELIVERY DESTINATION</label>
    <type>TextArea</type>
</CustomField>