force-app/main/default/objects/RFPRFQ__c/recordTypes/RFPRFQFromCustomer.recordType-meta.xml
<RecordType>
    <fullName>RFPRFQFromCustomer</fullName>
    <active>true</active>
    <label>RFP/RFQ From Customer</label>
</RecordType>