force-app/main/default/objects/RFPRFQ__c/recordTypes/RFPRFQToVendor.recordType-meta.xml
<RecordType>
    <fullName>RFPRFQToVendor</fullName>
    <active>true</active>
    <label>RFP/RFQ To Vendor</label>
</RecordType>