force-app/main/default/objects/RFPRFQ__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RFPREQName__c</columns>
    <columns>DescriptionOfGoods__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Incoterms__c</columns>
    <columns>Mode__c</columns>
    <columns>Volume__c</columns>
    <columns>RquestBy__c</columns>
    <columns>PODAOA__c</columns>
    <columns>POLAOD__c</columns>
    <columns>ETD__c</columns>
    <columns>RequiredService__c</columns>
    <columns>RequiredInformation__c</columns>
    <columns>RateRequirement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>