force-app/main/default/objects/RFPRFQ__c/listViews/RFPRFQFromCustomer.listView-meta.xml
<ListView>
    <fullName>RFPRFQFromCustomer</fullName>
    <columns>NAME</columns>
    <columns>RFPREQName__c</columns>
    <columns>RFPRFQStatus__c</columns>
    <columns>Customer__c</columns>
    <columns>ParentRFPRFQID__c</columns>
    <columns>ProductID__c</columns>
    <columns>TargetRate__c</columns>
    <columns>RateRequirement__c</columns>
    <columns>RequiredInformation__c</columns>
    <columns>RequiredService__c</columns>
    <columns>POLAOD__c</columns>
    <columns>PODAOA__c</columns>
    <columns>ETD__c</columns>
    <columns>ETA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RFPRFQ__c.RFPRFQFromCustomer</value>
    </filters>
    <label>1.RFP/RFQ From Customer</label>
    <language>en_US</language>
</ListView>