force-app/main/default/objects/RFPRFQ__c/listViews/X2_RFP_RFQ_To_Vendor.listView-meta.xml
<ListView>
    <fullName>X2_RFP_RFQ_To_Vendor</fullName>
    <columns>NAME</columns>
    <columns>RFPREQName__c</columns>
    <columns>RFPRFQStatus__c</columns>
    <columns>ParentRFPRFQID__c</columns>
    <columns>ProductID__c</columns>
    <columns>TargetRate__c</columns>
    <columns>RateRequirement__c</columns>
    <columns>RequiredInformation__c</columns>
    <columns>RequiredService__c</columns>
    <columns>PODAOA__c</columns>
    <columns>POLAOD__c</columns>
    <columns>ETA__c</columns>
    <columns>ETD__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RFPRFQ__c.RFPRFQToVendor</value>
    </filters>
    <label>2. RFP/RFQ To Vendor</label>
    <language>en_US</language>
</ListView>